@@ -97,4 +97,5 @@ The driver is maintained by a mailing list:
 
   perl@lists.mysql.com
 
-You can also get help from MySQL, Patrick Galbraith patg@mysql.com
+You can also get help from the maintainer, Patrick Galbraith patg@grazr.com,
+
