@@ -1,4 +1,4 @@
-<unreleased> Jim Winstead <jimw@mysql.com> (4.001)
+<unreleased> Jim Winstead <jimw@mysql.com> Patrick Galbraith <patg@grazr.com> (4.001)
 * Fix handling of unsigned integer values in result sets when using
   server-side prepared statements (they were not retrieved at all).
 * Fix handling of signed integer values when using server-side prepared
@@ -29,6 +29,10 @@
 * Fixed Bundle::DBD::mysql to only include modules required for using
   DBD::mysql, not the old Mysql package. [rt.cpan.org #24096]
 * Updated Makefile.PL to not include files in .svn directories
+* Fixed various compile warnings in mysql.xs
+* Cleaned up stored procedure examples, made strict
+* Fixed bug that blew away subsequent result sets if you fetched all rows, only in
+  result sets that had more than one row
 
 2006-12-22 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (4.00)
 * Added Alexey Stroganov's patch which fixes varying number of columns in 
